# DualSenseCLI

./: CMakeLists.txt  build.bat  run.bat
cmake/: CleanDirectoryList.cmake  FindWinHID.cmake  MinGWSearchPathExtras.cmake  PrefixListGlob.cmake
src/: CMakeLists.txt  main.c
